--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-:root{
-  --text-theme :#844fc1
+:root {
+  --text-theme: #844fc1
 }
+
+html,
 body {
+  scroll-behavior: smooth;
   font-family: 'Poppins', sans-serif !important;
   background-color: #f8f9fa !important;
 }
@@ -67,8 +70,6 @@ body {
   cursor: pointer;
 }
 
-
-
 table th {
   text-align: center;
   text-transform: uppercase;
@@ -92,7 +93,6 @@ table a {
 
 }
 
-
-.presentation .nav-link{
-  color: var(--text-theme);
+.nav-link {
+  transition: all 0.2s ease-in-out;
 }
